--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 
 <meta charset="UTF-8">
 <link href="styles/style.css" rel="stylesheet" type="text/css">
+<!-- importing Bootstrap 3.3.7-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- importing jquery 3.2.1-->
+<script
+			  src="https://code.jquery.com/jquery-3.2.1.min.js"
+			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+			  crossorigin="anonymous"></script>
 
 </head>
 
