--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8">
-<link href="styles/style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="styles/style.css">
 <!-- importing Bootstrap 3.3.7-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <!-- importing font awesome 4.5.0-->
@@ -14,11 +14,25 @@
 </head>
 
 <body>
-<div class="container-fluid">
+<div class="container-fluid" id="outer-box">
 
+<div id ="header">
+	<h2>Weather</h2>
+</div>
 
+<div id="symbol">
+	
+</div>
 
+<div id="temp">
+	<div id="c-f-switch">
+		
+	</div>
+</div>
 
+<div id="footer">
+	<h4>Coded by <a href="https://www.twitter.com/TameRocket/" target="_blank">Stu Wares</a></h4>
+</div>	
 
 </div>
 
