added api call for open weather map, stuck trying to render returned ajax

--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
 <body>
 <div class="container-fluid" id="outer-box">
 
-<div id ="header">
-	<h2>Weather</h2>
-</div>
+	<div class="jumbotron text-center">
+		<div id ="header">
+			<h1 id="city">Weather</h1>
+		</div>
 
-<div id="symbol">
-	
-</div>
+		<div id="symbol">
+			<div id="data"></div>
+		</div>
 
-<div id="temp">
-	<div id="c-f-switch">
+		<div id="temp">
+			<div id="c-f-switch">
 		
+			</div>
+		</div>
 	</div>
-</div>
 
 <div id="footer">
 	<h4>Coded by <a href="https://www.twitter.com/TameRocket/" target="_blank">Stu Wares</a></h4>
