adding weather description and temperature

--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
 
 	<div class="jumbotron text-center">
 		<div id ="header">
-			<h1 id="city">Weather</h1>
+			<div id="city"><h2>Searching....</h2></div>
 		</div>
 
 		<div id="symbol">
-			<div id="data"></div>
+			
+		</div>
+
+		<div id="details">
+		
 		</div>
 
 		<div id="temp">
