added css for toggle button

--- a/index.html
+++ b/index.html
@@ -33,14 +33,19 @@
 		</div>
 
 		<div id="temp">
-			<div id="c-f-switch">
-		
-			</div>
+
 		</div>
+
+
 	</div>
 
 <div id="footer">
-	<h4>Coded by <a href="https://www.twitter.com/TameRocket/" target="_blank">Stu Wares</a></h4>
+	<h4 id="contact">Coded by <a href="https://www.twitter.com/TameRocket/" target="_blank">Stu Wares</a></h4>
+	<!-- toggle switch -->
+	<label class="switch" id="fc-toggle">
+		<input type="checkbox" name="">
+		<div class="slider"></div>
+	</label>
 </div>	
 
 </div>
