click handler for toggle

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 <div class="container-fluid" id="outer-box">
 
 	<div class="jumbotron text-center">
+
+	<!-- toggle switch -->
+		<div id="but-box">
+		<label class="switch" id="fc-toggle">
+			<input type="checkbox" name="">
+			<div class="slider"></div>
+		</label>
+		<span id="deg-f">&deg;F</span>
+		</div>
+
 		<div id ="header">
 			<div id="city"><h2>Searching....</h2></div>
 		</div>
@@ -37,15 +47,14 @@
 		</div>
 
 
+
+
 	</div>
 
 <div id="footer">
 	<h4 id="contact">Coded by <a href="https://www.twitter.com/TameRocket/" target="_blank">Stu Wares</a></h4>
-	<!-- toggle switch -->
-	<label class="switch" id="fc-toggle">
-		<input type="checkbox" name="">
-		<div class="slider"></div>
-	</label>
+
+
 </div>	
 
 </div>
