--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	<div class="jumbotron text-center">
 
 	<!-- toggle switch -->
+		<!-- **Removed toggle switch due to complications with 
+		the click handler and the css animation** 
 		<div id="but-box">
 		<label class="switch" id="fc-toggle">
 			<input type="checkbox" name="">
@@ -29,7 +31,8 @@
 		</label>
 		<span id="deg-f">&deg;F</span>
 		</div>
-
+		-->
+		
 		<div id ="header">
 			<div id="city"><h2>Searching....</h2></div>
 		</div>
