--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
 
 <meta charset="UTF-8">
-<!-- importing Bootstrap 3.3.7-->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- importing Bootstrap 3.3.7
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+
+<!-- Bootstrap 3.3.7 -->
+<link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
 <!-- importing font awesome 4.5.0-->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
 <!-- base css, import after bootstrap! -->
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 
-<!-- importing jquery 3.2.1-->
+<!-- importing jquery 3.2.1
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+-->
 
+<!-- jQery 3.2.1 -->
+<script type="text/javascript" src="javascript/jquery-3.2.1.min.js"></script>
 </head>
 
 <body>
