--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 
 <meta charset="UTF-8">
+<!-- mobile responsive meta, copied directly from bootstrap 4 docs -->
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- importing Bootstrap 3.3.7
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 
